uploaed image format change in index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container-fluid">
             <section class="row" id="top">
                 <div class="fill-screen" style="background-image:url(./images/laptop-1.jpg)">
-                    <img class="title img-circle img-responsive" src="./images/my-pic.png">
+                    <img class="title img-circle img-responsive" src="./images/my-pic.jpg">
                     <div class="title first-name"> SANDHYA
                             <span class="last-name">YADAV</span>
                     </div>
