coding content  section edit

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     <div class="col-md-6 col-sm-6">
                        <div class="skill-tech">
                            <h4><i class="fa fa-code"></i> Coding</h4>
-                               <p> I like  to take challenge that's the reason I like the coding must. Today I know the Php so I prefer the language for coding is Php.. But soon I will learn much more language for coding. </p>
+                               <p> I like  to take challenge that's the reason I like the coding must. Today I know the Php so I prefer the language for coding is Php..  </p>
                        </div>
                     </div>
                      <div class="col-md-6 col-sm-6">
